--- a/vuahanghieu_grid.css
+++ b/vuahanghieu_grid.css
@@ -140,7 +140,7 @@
 }
 
 /* >= Tablet */
-@media (max-width :1200px) {
+@media (min-width:990px) and (max-width :1249px) {
     .row {
         margin-left: -8px;
         margin-right: -8px;
@@ -276,7 +276,7 @@
 }
 
 /* PC medium resolution > */
-@media (min-width: 1201px) {
+@media (min-width: 1250px) {
     .row {
         margin-left: -12px;
         margin-right: -12px;
